--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.9.3",
     "@material-table/core": "^0.2.35",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.0",
+    "@mui/lab": "^5.0.0-alpha.94",
     "@mui/x-date-pickers": "^5.0.0-beta.2",
     "@mui/x-date-pickers-pro": "^5.0.0-beta.2",
     "@paypal/react-paypal-js": "^7.8.1",
@@ -19,13 +19,17 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.29.1",
     "firebase": "^9.9.0",
+    "mapbox-gl": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-hook-form": "^7.33.1",
+    "react-map-gl": "^7.0.18",
+    "react-number-easing": "^0.0.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.1.1",
     "redux": "^4.2.0",
