--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,12 +19,15 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.29.1",
-    "firebase": "^9.9.0",
+    "firebase": "^9.9.2",
     "mapbox-gl": "^2.9.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-google-charts": "^4.0.0",
     "react-hook-form": "^7.33.1",
+    "react-icons": "^4.4.0",
     "react-map-gl": "^7.0.18",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -33,6 +36,8 @@
     "react-slick": "^0.29.0",
     "reactstrap": "^9.1.1",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "remixicon": "^2.5.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
