--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "car-rental",
   "version": "0.1.0",
-  "proxy": "https://g-auto.onrender.com",
+  "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -18,7 +18,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "caniuse-lite": "^1.0.30001539",
     "date-fns": "^2.29.1",
     "firebase": "^9.9.2",
     "mapbox-gl": "^2.9.2",
